feat: implement second version of getAllBooks [skip-ci]
